feat: typescript を導入

--- a/public/global.css
+++ b/public/global.css
@@ -1,8 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 
 body {
   color: #333;
-  /* display: flex; */
   font-family: "Noto Sans JP", sans-serif;
   font-size: 14px;
   line-height: 1.5;
@@ -41,4 +40,4 @@ code {
   body {
     font-size: 16px;
   }
-}
+} */
